--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="instructions">
         Refer to the map below to estimate the average daily solar hours for your location.
     </div>
-    <img src="/Images/solarmap.png" alt="Solar Map of UK" class="solar-map">
+    <img src="Images/solarmap.png" alt="Solar Map of UK" class="solar-map">
 </div>
 
 <script>
